# ai-code-reviewer-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: sample-analysis.md  technical-analysis-400pr.md
scripts/: analyze-ai-reviewers.py
tests/: test_analyze_ai_reviewers.py
