[tool.poetry]
name = "ai-code-reviewer-analysis"
version = "0.1.0"
description = "LLM-as-judge analysis tool for comparing AI code reviewers"
authors = ["Quentin <qfennessy@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-genai = "^1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
